<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright © 2024-2026 LSDAF

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.lsdaf</groupId>
    <artifactId>lsadf-backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>LSADF Backend Parent</name>


    <modules>
        <module>lsadf_dependencies</module>
        <module>build_parent</module>
        <module>lsadf_bom</module>
        <module>lsadf_test_report</module>
    </modules>

    <properties>
        <spring-boot.version>3.5.7</spring-boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <keycloak-spring-boot-starter.version>25.0.3</keycloak-spring-boot-starter.version>
        <keycloak-admin-client.version>26.0.7</keycloak-admin-client.version>
        <java.version>25</java.version>
        <cucumber.version>7.31.0</cucumber.version>
        <copy-rename-maven-plugin.version>1.0</copy-rename-maven-plugin.version>
        <lombok-plugin.version>1.18.20.0</lombok-plugin.version>
        <maven-javadoc.version>3.7.0</maven-javadoc.version>
        <postgresql.version>42.7.3</postgresql.version>
        <swagger.version>2.5.0</swagger.version>
        <jjwt.version>0.11.5</jjwt.version>
        <commons-io.version>2.21.0</commons-io.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-fileupload.version>1.6.0</commons-fileupload.version>
        <springdoc-openapi.version>1.7.0</springdoc-openapi.version>
        <embedded-redis.version>1.4.3</embedded-redis.version>
        <testcontainers-keycloak.version>4.0.1</testcontainers-keycloak.version>
        <commons-compress.version>1.27.1</commons-compress.version>
        <maven-surefire-report-plugin.version>3.5.2</maven-surefire-report-plugin.version>
        <spotless-maven-plugin.version>2.45.0</spotless-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <google-java-format.version>1.27.0</google-java-format.version>
        <license-maven-plugin.version>5.0.0</license-maven-plugin.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <jspecify.version>1.0.0</jspecify.version>
        <testcontainers.version>2.0.3</testcontainers.version>
        <rest-assured.version>6.0.0</rest-assured.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>${license-maven-plugin.version}</version>
                    <configuration>
                        <properties>
                            <owner>LSDAF</owner>
                            <year>2024-2026</year>
                        </properties>
                        <useDefaultExcludes>true</useDefaultExcludes>
                        <licenseSets>
                            <licenseSet>
                                <header>com/mycila/maven/plugin/license/templates/APACHE-2-noemail.txt</header>
                                <excludes>
                                    <exclude>docker/**</exclude>
                                    <exclude>env/**</exclude>
                                    <exclude>.venv/**</exclude>
                                    <exclude>**/Makefile</exclude>
                                    <exclude>keycloak_realm/**</exclude>
                                    <exclude>.make/**</exclude>
                                    <exclude>.idea/**</exclude>
                                    <exclude>src/test/resources/**</exclude>
                                    <exclude>src/main/resources/**</exclude>
                                    <exclude>**/*/frontend/generated/**</exclude>
                                    <exclude>**/vite.generated.ts</exclude>
                                    <exclude>.python-version</exclude>
                                    <exclude>.pre-commit-script.sh</exclude>
                                    <exclude>.pre-commit-config.yaml</exclude>
                                    <exclude>**/**.sql</exclude>
                                    <exclude>**/**.txt</exclude>
                                    <exclude>**/**.yml</exclude>
                                    <exclude>**/**.factories</exclude>
                                    <exclude>**/**.properties</exclude>
                                </excludes>
                            </licenseSet>
                        </licenseSets>
                        <mapping>
                            <tsx>JAVADOC_STYLE</tsx>
                            <feature>SCRIPT_STYLE</feature>
                            <mjs>JAVADOC_STYLE</mjs>
                        </mapping>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>6.25.0</version>
                <configuration>
                    <exportDatatables>true</exportDatatables>
                    <activeRecipes>
                        <recipe>org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0</recipe>
                    </activeRecipes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-spring</artifactId>
                        <version>6.20.0</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
